[gd_scene load_steps=13 format=3 uid="uid://d33ey25jdpimv"]

[ext_resource type="Script" uid="uid://b80hdq3ug5e08" path="res://scenes/game/minigame_data.gd" id="1_8p414"]
[ext_resource type="Texture2D" uid="uid://b6mj3aiurm4vx" path="res://assets/tiles/oreMine.png" id="2_0wkj4"]
[ext_resource type="Script" path="res://ores.gd" id="2_7hdtf"]
[ext_resource type="Texture2D" uid="uid://5bdm7lmq4ojq" path="res://assets/tiles/mineBG.png" id="2_nknyf"]
[ext_resource type="Resource" uid="uid://culwl384yv5fj" path="res://assets/tiles/Ore resources/Xs.tres" id="3_gdpjo"]
[ext_resource type="Resource" uid="uid://d1nh46wxe1e75" path="res://assets/tiles/Ore resources/S.tres" id="4_3t2yv"]
[ext_resource type="Resource" uid="uid://tardjd57fswc" path="res://assets/tiles/Ore resources/M.tres" id="5_u3umb"]
[ext_resource type="Resource" uid="uid://bi2geyqicg14f" path="res://assets/tiles/Ore resources/L.tres" id="6_2pmfl"]
[ext_resource type="Resource" uid="uid://c1fx1bu87ji2m" path="res://assets/tiles/Ore resources/Xl.tres" id="7_ugh6f"]
[ext_resource type="AudioStream" uid="uid://k3lboicpfw0s" path="res://assets/music/Shiny Rocks.mp3" id="10_gdpjo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0wkj4"]
texture = ExtResource("2_0wkj4")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_csx57"]
tile_size = Vector2i(128, 128)
sources/1 = SubResource("TileSetAtlasSource_0wkj4")

[node name="MinigameData" type="Node2D"]
script = ExtResource("1_8p414")
ores = Array[ExtResource("2_7hdtf")]([ExtResource("3_gdpjo"), ExtResource("4_3t2yv"), ExtResource("5_u3umb"), ExtResource("6_2pmfl"), ExtResource("7_ugh6f")])

[node name="Background" type="Parallax2D" parent="."]
repeat_size = Vector2(128, 128)
repeat_times = 40

[node name="bgDirt" type="Sprite2D" parent="Background"]
position = Vector2(-24, -24)
scale = Vector2(2, 2)
texture = ExtResource("2_nknyf")

[node name="mineWindow" type="Node2D" parent="."]

[node name="Labels" type="CanvasLayer" parent="mineWindow"]

[node name="BackEarly" type="Button" parent="mineWindow/Labels"]
offset_right = 64.0
offset_bottom = 64.0
text = "Back"

[node name="moveCounter" type="Label" parent="mineWindow/Labels"]
offset_top = 64.0
offset_right = 40.0
offset_bottom = 87.0

[node name="returnSurface" type="Node2D" parent="mineWindow/Labels"]
visible = false

[node name="Back" type="Button" parent="mineWindow/Labels/returnSurface"]
offset_right = 64.0
offset_bottom = 64.0
text = "Back"

[node name="Stats" type="RichTextLabel" parent="mineWindow/Labels/returnSurface"]
offset_top = 64.0
offset_right = 640.0
offset_bottom = 304.0

[node name="oreMap" type="TileMapLayer" parent="mineWindow"]
position = Vector2(-20, 0)
tile_set = SubResource("TileSet_csx57")

[node name="Track" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Track"]
stream = ExtResource("10_gdpjo")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="mineWindow/Labels/BackEarly" to="." method="_on_back_early_pressed"]
[connection signal="pressed" from="mineWindow/Labels/returnSurface/Back" to="." method="_on_back_pressed"]
